cmake_minimum_required(VERSION 2.8.3)
PROJECT(access_PERM)
SET(APPNAME access_perm)
ADD_DEFINITIONS(-DSERVER=${SERVER})

set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${HARU_PREFIX} ${GDCORE_PREFIX} ${GDWTCORE_PREFIX} ${WSCORE_PREFIX})
SET (APPNAME_SRCS
    WsAccessTreeDisplayer.cpp
    )

INCLUDE(${CMAKE_ROOT}/Modules/gdcmake/Find_wscore.cmake)

IF(NOT WSCORE_FOUND)
    MESSAGE(FATAL_ERROR "** these program needs wscore libraries... Abord.")
ENDIF(NOT WSCORE_FOUND)

INCLUDE_DIRECTORIES(
  ${WSCORE_INCLUDE_DIRS}
)

SET ( APP_LIBRARIES
  ${WSCORE_LIBRARIES}
)

ADD_EXECUTABLE(
    ${APPNAME}
    ${APPNAME_SRCS} 
)

TARGET_LINK_LIBRARIES(${APPNAME} ${APP_LIBRARIES} )

